# 20newsgroups_rag

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  prototyping.ipynb  pyproject.toml
app/: config.py  main.py
app/rag/: generator.py  retriever.py  vectorstore.py
