[tool.poetry]
name = "app"
version = "0.0.1"
description = "A small prototype application for RAG using langchain."
authors = ["kmohenski <karlo.mohenski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
poetry = "^1.8.4"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
langchain-community = "^0.3.3"
langchain-chroma = "^0.1.4"
scikit-learn = "^1.5.2"
streamlit = "^1.39.0"
